[package]
name = "async_tcp_server"
version = "0.1.0"
authors = ["xargin <cao1988228@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["async-await"] }
