[package]
name = "tcp_transparent_proxy"
version = "0.1.0"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio"}
futures = { version = "0.3", features = ["async-await"] }
